@@ -1,3 +1,8 @@
+2006-12-26 [wwp]	1.12.3cvs2
+
+	* src/maillock.c
+		Add missing #include (fixing compiler warning).
+
 2006-12-15 [ticho]	1.12.3cvs1
 
 	* configure.ac
